--- a/main-app/client/package.json
+++ b/main-app/client/package.json
@@ -28,9 +28,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "lowlight": "^3.3.0",
     "lucide-react": "^0.552.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.1",
     "react-dom": "^19.1.1",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.5",
