--- a/main-app/client/package.json
+++ b/main-app/client/package.json
@@ -37,7 +37,8 @@
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.5",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16"
+    "tailwindcss": "^4.1.16",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
