--- a/main-app/server/package.json
+++ b/main-app/server/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
+    "@fastify/cors": "^11.2.0",
     "@supabase/supabase-js": "^2.87.1",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2"
