--- a/main-app/server/package.json
+++ b/main-app/server/package.json
@@ -14,6 +14,7 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.2.0",
     "@supabase/supabase-js": "^2.87.1",
+    "creem_io": "^0.4.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2"
   },
