--- a/main-app/server/package.json
+++ b/main-app/server/package.json
@@ -15,6 +15,7 @@
     "@fastify/cors": "^11.2.0",
     "@supabase/supabase-js": "^2.87.1",
     "creem_io": "^0.4.0",
+    "crypto-js": "^4.2.0",
     "dotenv": "^17.2.3",
     "fastify": "^5.6.2"
   },
